dz-2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-app-deployment
  namespace: otus-dz-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otus-app
  template:
    metadata:
      labels:
        app: otus-app
    spec:
      containers:
        - name: otus-app
          image: gubanovss/otus-app:dz-2
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 3
            periodSeconds: 3
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            failureThreshold: 60
            periodSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 3
            periodSeconds: 3
