dz-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-app-service
  namespace: otus-dz-2
spec:
  selector:
    app: otus-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
